<resources>
    <string name="app_name">Groupo</string>

    <!-- Firebase key -->
    <string name="default_web_client_id">347909345061-pg9vrjn8du07nau7tucqrui5v8chdcc6.apps.googleusercontent.com</string>

    <!-- Google Map API key -->
    <string name="google_map_api">AIzaSyC8baJpDFplbZ-0B_EuOgRYCHppdxpTVs8</string>
    <string name="welcome">Anonymously communicate with people near you!</string>

    <!-- Titles -->
    <string name="create_post">Add Post</string>
    <string name="your_posts">Your Posts</string>
    <string name="posts">Posts</string>
    <string name="view_post">View Post</string>

    <!-- Menu -->
    <string name="sign_out">Sign Out</string>
    <string name="account">Account</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>

    <!-- ContextMenu -->
    <string name="delete_post">Delete</string>

    <!-- Create Post -->
    <string name="title">Title</string>
    <string name="timestamp">Timestamp</string>
    <string name="message">Message</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="enter_a_title">Enter a title</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="delete_account">Delete Account</string>

    <string-array name="titleItemsArray">
        <item>Bikini Pool Party</item>
        <item>The Office Trivia</item>
        <item>Cars and Coffee</item>
        <item>Underground Racing</item>
        <item>Happy Hour at Madso</item>
        <item>The Bachelor Watch Party</item>
    </string-array>
    <string-array name="messageItemsArray">
        <item>Dwayne Wayde is having a pool party and Selena Gomez will...</item>
        <item>Everyone thinks they know the most about the Office so its...</item>
        <item>If you think have a nice car then lets put it to the test...</item>
        <item>Cannot tell you what this is really about so just come and see...</item>
        <item>Dueling pianos are back but this time there is something extra...</item>
        <item>I am so over all this bachelor drama so lets see who can make...</item>
    </string-array>

</resources>
